--- a/indec.html
+++ b/indec.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Amjad web</title>
-  <link rel="stylesheet" href="/Users/amjadayman/Documents/Web Devolopment /css/Styles.css">
+  <link rel="stylesheet" href="Styles.css">
 </head>
 
 <body>
